--- a/ai-ready-dc/intersight_mcp/Dockerfile
+++ b/ai-ready-dc/intersight_mcp/Dockerfile
@@ -13,10 +13,10 @@ RUN python3 -m venv .venv
 RUN .venv/bin/pip install --upgrade pip
 
 # Install required packages inside venv
-RUN .venv/bin/pip install mcpo uv requests httpx
+RUN .venv/bin/pip install mcpo==0.0.17 uv requests httpx
 
 # Copy app source code last (to leverage Docker cache)
-RUN pip install mcpo uv requests
+RUN pip install mcpo==0.0.17 uv requests
 
 COPY . .
 
@@ -27,6 +27,7 @@ RUN uv sync
 # Expose port 8000 for OpenShift routing
 EXPOSE 8000
 
-# Run the uvx command using the venv python
-# CMD ["uvx", "mcpo", "--port", "8000", "--", ".venv/bin/python", "intersight_api.py"]
 CMD ["uv", "run", "intersight_api.py", "--log-level", "DEBUG"]
+
+# Uncomment for Open WebUI MCP integration.
+# CMD ["uvx", "mcpo", "--host", "0.0.0.0", "--port", "8000", "--", "uv", "run", "intersight_api.py"]
